backend/nohup.out
INFO 2025-11-25 19:58:06,547 autoreload Watching for file changes with StatReloader
Exception in thread django-main-thread:
Traceback (most recent call last):
  File "/opt/homebrew/Cellar/python@3.13/3.13.5/Frameworks/Python.framework/Versions/3.13/lib/python3.13/threading.py", line 1043, in _bootstrap_inner
    self.run()
    ~~~~~~~~^^
  File "/opt/homebrew/Cellar/python@3.13/3.13.5/Frameworks/Python.framework/Versions/3.13/lib/python3.13/threading.py", line 994, in run
    self._target(*self._args, **self._kwargs)
    ~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/utils/autoreload.py", line 64, in wrapper
    fn(*args, **kwargs)
    ~~^^^^^^^^^^^^^^^^^
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/core/management/commands/runserver.py", line 133, in inner_run
    self.check(display_num_errors=True)
    ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/core/management/base.py", line 486, in check
    all_issues = checks.run_checks(
        app_configs=app_configs,
    ...<2 lines>...
        databases=databases,
    )
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/core/checks/registry.py", line 88, in run_checks
    new_errors = check(app_configs=app_configs, databases=databases)
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/core/checks/urls.py", line 14, in check_url_config
    return check_resolver(resolver)
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/core/checks/urls.py", line 24, in check_resolver
    return check_method()
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/urls/resolvers.py", line 519, in check
    for pattern in self.url_patterns:
                   ^^^^^^^^^^^^^^^^^
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/utils/functional.py", line 47, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
                                         ~~~~~~~~~^^^^^^^^^^
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/urls/resolvers.py", line 738, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
                       ^^^^^^^^^^^^^^^^^^^
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/utils/functional.py", line 47, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
                                         ~~~~~~~~~^^^^^^^^^^
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/urls/resolvers.py", line 731, in urlconf_module
    return import_module(self.urlconf_name)
  File "/opt/homebrew/Cellar/python@3.13/3.13.5/Frameworks/Python.framework/Versions/3.13/lib/python3.13/importlib/__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 1026, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/Users/epert/Desktop/supermarket-management-system/backend/config/urls.py", line 38, in <module>
    path('api/products/', include('apps.products.urls')),
                          ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/epert/Desktop/supermarket-management-system/backend/venv/lib/python3.13/site-packages/django/urls/conf.py", line 39, in include
    urlconf_module = import_module(urlconf_module)
  File "/opt/homebrew/Cellar/python@3.13/3.13.5/Frameworks/Python.framework/Versions/3.13/lib/python3.13/importlib/__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 1026, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/Users/epert/Desktop/supermarket-management-system/backend/apps/products/urls.py", line 3, in <module>
    from .views import (
    ...<5 lines>...
    )
  File "/Users/epert/Desktop/supermarket-management-system/backend/apps/products/views.py", line 95
    filter_backends = [DjangoFilterBackend, filters.SearchFilter, filters.OrderingFilter]').prefetch_related('images', 'variants')
                                                                                                                                ^
SyntaxError: unterminated string literal (detected at line 95)
INFO 2025-11-25 19:58:49,209 autoreload /Users/epert/Desktop/supermarket-management-system/backend/apps/products/views.py changed, reloading.
Performing system checks...

INFO 2025-11-25 19:58:49,612 autoreload Watching for file changes with StatReloader
INFO 2025-11-25 19:58:50,870 autoreload /Users/epert/Desktop/supermarket-management-system/backend/apps/products/views.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
November 25, 2025 - 19:58:49
Django version 5.0.14, using settings 'config.settings.development'
Starting development server at http://127.0.0.1:8001/
Quit the server with CONTROL-C.

INFO 2025-11-25 19:58:51,130 autoreload Watching for file changes with StatReloader
